package edu.mylearning.utilities.currency.converter.currency;

public interface Currency {
    String getCode();
    String getSymbol();
}
